kubernetes-home-ops/kubernetes/apps/home-automation/bambuddy/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.smadja.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bambuddy
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: bambuddy
      app.kubernetes.io/instance: bambuddy
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-internal
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
